--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
         "react-scripts": "4.0.3",
         "redux": "^4.1.1",
         "redux-thunk": "^2.3.0",
-        "styled-components": "^5.3.3"
+        "styled-components": "^5.3.3",
+        "styled-icons": "^10.45.0"
     },
     "scripts": {
         "start": "react-scripts start",
