--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.23.0",
+        "emotion-icons": "^3.27.0",
         "react": "^17.0.2",
         "react-daum-postcode": "^3.0.0",
         "react-dom": "^17.0.2",
@@ -21,8 +22,7 @@
         "react-scripts": "4.0.3",
         "redux": "^4.1.1",
         "redux-thunk": "^2.3.0",
-        "styled-components": "^5.3.3",
-        "styled-icons": "^10.45.0"
+        "styled-components": "^5.3.3"
     },
     "scripts": {
         "start": "react-scripts start",
