--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
         "@fortawesome/react-fontawesome": "^0.1.16",
+        "@styled-icons/bootstrap": "^10.34.0",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
@@ -21,8 +22,7 @@
         "react-scripts": "4.0.3",
         "redux": "^4.1.1",
         "redux-thunk": "^2.3.0",
-        "styled-components": "^5.3.3",
-        "styled-icons": "^10.45.0"
+        "styled-components": "^5.3.3"
     },
     "scripts": {
         "start": "react-scripts start",
