--- a/appspec.yml
+++ b/appspec.yml
@@ -1,16 +1,16 @@
 version: 0.0
 os: linux
 files:
-    - source: /
-      destination: /home/ubuntu/ThereWeather
+  - source: /
+    destination: /home/ubuntu/AnimalChat
 
 hooks:
-    ApplicationStop:
-        - location: scripts/stop.sh
-          runas: root
-    AfterInstall:
-        - location: scripts/initialize.sh
-          runas: root
-    ApplicationStart:
-        - location: scripts/start.sh
-          runas: root
+  ApplicationStop:
+    - location: scripts/stop.sh
+      runas: root
+  AfterInstall:
+    - location: scripts/initialize.sh
+      runas: root
+  ApplicationStart:
+    - location: scripts/start.sh
+      runas: root
