--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.23.0",
+        "jquery": "^3.6.0",
         "react": "^17.0.2",
         "react-daum-postcode": "^3.0.0",
         "react-dom": "^17.0.2",
