--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -23,6 +24,7 @@
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2",
+    "npm": "^8.1.2",
     "sequelize": "^6.7.0",
     "sequelize-cli": "^6.2.0"
   }
