--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
