--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
