--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "axios": "^0.23.0",
         "jquery": "^3.6.0",
         "react": "^17.0.2",
+        "react-chartjs-2": "^3.3.0",
         "react-daum-postcode": "^3.0.0",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.5",
