--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
         "redux": "^4.1.1",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.3.0",
+        "simple-peer": "^9.11.0",
+        "socket.io-client": "^4.3.2",
         "styled-components": "^5.3.3"
     },
     "scripts": {
