--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^2.3.2",
     "npm": "^8.1.2",
     "sequelize": "^6.7.0",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^4.3.1"
   }
 }
