--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2",
+    "nodemailer": "^6.7.0",
     "npm": "^8.1.2",
     "pm2": "^5.1.2",
     "sequelize": "^6.7.0",
