--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.23.0",
         "jquery": "^3.6.0",
+        "nanoid": "^3.1.30",
         "react": "^17.0.2",
         "react-chartjs-2": "^3.3.0",
         "react-daum-postcode": "^3.0.0",
