--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,33 @@
 {
-  "dependencies": {
-    "npm": "^8.1.0"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^2.0.13"
+    },
+    "dependencies": {
+        "axios": "^0.24.0",
+        "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
+        "crypto": "^1.0.1",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.3",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.3.2",
+        "nodemailer": "^6.7.0",
+        "npm": "^8.1.2",
+        "pm2": "^5.1.2",
+        "sequelize": "^6.7.0",
+        "sequelize-cli": "^6.2.0",
+        "socket.io": "^4.3.1"
+    }
 }
