--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,8 @@
 REACT_APP_KAKAO_MAP_KEY=56da23e85568f5cc18b76765c5e2e6fb
 REACT_APP_URL=https://thereweather.space
-REACT_APP_LOCAL_URL=https://thereweather.space
 
-///REACT_APP_LOCAL_URL=http://localhost:80
+;배포시에 주석풀기
+REACT_APP_LOCAL_URL=https://thereweather.space/api
+
+;로컬개발시에 주석풀기
+;REACT_APP_LOCAL_URL=http://localhost:80/api
