--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MYSQL_ID=root
 MYSQL_PASSWORD=1234
-MYSQL_NAME=TWD
+MYSQL_NAME=there_weather
 ACCESS_SECRET=s1e0c2r6e0t
 REFRESH_SECRET=s21u10g2a6r
 PW_KEY=s2e0c2r1e1tw0ea2ther7
@@ -9,12 +9,12 @@ EMAIL=thereweather17@gmail.com
 EMAILPW=s2e0c2r1e1tw0ea2ther71
 
 ; 배포시 주석해제
-CLIENT_URL=https://thereweather.space
-HTTPS_PORT=4000
+; CLIENT_URL=https://thereweather.space
+; HTTPS_PORT=4000
 
 ; 로컬개발시 주석풀기
-;CLIENT_URL=http://localhost:3000
-;HTTPS_PORT=80
+CLIENT_URL=http://localhost:3000
+HTTPS_PORT=80
 
 
 
