--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "crypto": "^1.0.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "helmet": "^5.0.1",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.3",
