--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "axios": "^0.23.0",
+        "chart.js": "^3.7.0",
         "jquery": "^3.6.0",
         "nanoid": "^3.1.30",
         "react": "^17.0.2",
