환경변수 수정10

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,13 @@ phases:
     pre_build:
         commands:
             - cd client
-            - npm install
             - npm run build
+            - npm install
     build:
         commands:
+            - cd client
             - npm run build
+            - npm install
 
 artifacts:
     files:
