환경변수 테스트1

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@ node_modules/
 .pnp.js
 
 .env
-/client/.env
+/client/.env.development
+/client/.env.production
 /server/.env
+
 # /server/public
 
 # testing
