Feat: client/login console.log 주석처리 및 카카오로그인 처리중

--- a/server/.env
+++ b/server/.env
@@ -16,10 +16,8 @@ EMAILPW=s2e0c2r1e1tw0ea2ther71
 CLIENT_URL=http://localhost:3000
 HTTPS_PORT=80
 
-
-
 GEOCODER_AUTH_KEY=B25989A3-DDB4-3969-B6A8-7AA171FD4774
-
+KAKAO_ID=900d07591842ea31ab64a97cb7d5f8be
 
 
 
