--- a/client/.env
+++ b/client/.env
@@ -6,3 +6,6 @@ REACT_APP_URL=https://thereweather.space
 
 ;로컬개발시에 주석풀기
 REACT_APP_LOCAL_URL=http://localhost:80/api
+
+REACT_APP_KAKAO_ID=900d07591842ea31ab64a97cb7d5f8be
+REACT_APP_KAKAO_URL=http://localhost:3000/kakaologin
