--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "express": "^4.17.1",
         "helmet": "^5.0.1",
         "jsonwebtoken": "^8.5.1",
+        "lsof": "^0.1.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
