Fix:카카오 공유 url 수정

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 MYSQL_PASSWORD=1234 
-MYSQL_NAME=TWD 
+MYSQL_NAME=there_weather
 MYSQL_ID=root
 ACCESS_SECRET=s1e0c2r6e0t 
 REFRESH_SECRET=s21u10g2a6r 
@@ -10,6 +10,6 @@ EMAILPW=s2e0c2r1e1tw0ea2ther71
 
 ;로컬개발시 주석풀기 
 CLIENT_URL=http://localhost:3000 
-HTTPS_PORT=4000
+HTTPS_PORT=80
 GEOCODER_AUTH_KEY=B25989A3-DDB4-3969-B6A8-7AA171FD4774 
 KAKAO_ID=900d07591842ea31ab64a97cb7d5f8be
