--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "assert": "^2.0.0",
         "axios": "^0.23.0",
+        "buffer": "^6.0.3",
         "chart.js": "^3.7.0",
         "jquery": "^3.6.0",
         "nanoid": "^3.1.30",
